src/objects/BMCServiceDesk__ScanTargetListMember__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__AssignId__c</fullName>
        <description>To store assign Id of the scan target list member.</description>
        <label>Assign Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ExcludedMembers__c</fullName>
        <description>To store the excluded members of the scan target list member.</description>
        <label>Excluded Members</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKScanTargetList__c</fullName>
        <label>Scan Target List</label>
        <referenceTo>BMCServiceDesk__ScanTargetList__c</referenceTo>
        <relationshipLabel>Scan Target List Members</relationshipLabel>
        <relationshipName>ScanTargetListMembers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IncludedMembers__c</fullName>
        <description>To store the included members of the scan target list member.</description>
        <label>Included Members</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Scan Target List Member</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scan Target List Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>